RESOLVED FIXED146601
OSR exit fuzzing should allow us to select a static exit site
https://bugs.webkit.org/show_bug.cgi?id=146601
Summary OSR exit fuzzing should allow us to select a static exit site
Filip Pizlo
Reported 2015-07-03 19:47:30 PDT
This prevents fuzzing from biasing to the hottest exit sites.
Attachments
the patch (6.69 KB, patch)
2015-07-03 19:51 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-07-03 19:51:14 PDT
Created attachment 256128 [details] the patch
WebKit Commit Bot
Comment 2 2015-07-03 19:54:18 PDT
Attachment 256128 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGOSRExitFuzz.h:33: g_numberOfStaticOSRExitFuzzChecks is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/dfg/DFGOSRExitFuzz.cpp:33: g_numberOfStaticOSRExitFuzzChecks is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2015-07-09 12:45:13 PDT
Note You need to log in before you can comment on or make changes to this bug.